chore(wazuh): change api secret password

--- a/cluster/apps/wazuh-system/manager/api-secrets.enc.yaml
+++ b/cluster/apps/wazuh-system/manager/api-secrets.enc.yaml
@@ -5,33 +5,33 @@ metadata:
     name: wazuh-api-secrets
     namespace: wazuh-system
 stringData:
-    username: ENC[AES256_GCM,data:7X4djkZ5mx1I,iv:47A6cCqhHlaugy2yfu90l2xr7Tk0BFHqVuNWF4FAPVM=,tag:T0JNOcFzU8t9Rjs8h6vwtA==,type:str]
-    password: ENC[AES256_GCM,data:QHvnTNs9vGce5BNrr8W5wRlvKrmo7OfS6APLhoZo,iv:ahfjwkmVCHe3aR29QZE4Jbu4BpLBmoCkV6TsywRx0no=,tag:BNtaK9yLyzwMDXlX3ARmFQ==,type:str]
+    username: ENC[AES256_GCM,data:nU4HoHK3c7n+,iv:UApcAIM5tBJ8j+1BoYvbB7sgyXFqwpHoewbhxmN0IeI=,tag:LW27cqFe+LQChOGckEhKBA==,type:str]
+    password: ENC[AES256_GCM,data:8zbkr43pFkgT8H+rp0IcLkOso9vDoFljf7ahtg==,iv:ZYIIhynrOvJ/6ecKPPwa9Oie4nRiva/8O8nT7Lom5nk=,tag:Z88UfHPy3mL3j893odYG9Q==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2024-09-09T15:05:50Z"
-    mac: ENC[AES256_GCM,data:B44ewbVsHT3ly/Oogy6/+BC3Rh01cnsmygMBvMVQ62raFnzn5y0tDdMsE8gVp5IFzWYW68Qojc4VtOYwy9bfoc01EbgEd2dU3Hu/DUFd2MOFib2N/2TJOSEJ6MT8fmF/IPlVOV5wHOYV5NOME2h2Og9+n4q2PudL3Vc6yucIhCI=,iv:/1iJEVT5jPYX4Gh8RJ+zAZqOoKxV5vMsWjoaOPsrQgQ=,tag:IJOJFM+Kn1h1kYblnYw/6w==,type:str]
+    lastmodified: "2024-09-09T18:19:54Z"
+    mac: ENC[AES256_GCM,data:4BTorO5D44GWl150IdRTFNwvDzwM4V60Po1r7zTaTHrimPQjJDQhXBbg0ugn8nfSrwSB66Sxd8C/udz80au4Nr0sAiHTPuggFXB54QXcZgRP/YQDd+rIMjaneM+SMh5o6sIlJEUiEBtlnBfhd7CTj2T88jXTaD2yAICScj/deeg=,iv:PsJf/plvy++vRrfKwX30ZeZ7M5jVm4MfVc72yvPvY1U=,tag:8pbxttOCXXojIzkNaejmWg==,type:str]
     pgp:
-        - created_at: "2024-09-09T15:05:50Z"
+        - created_at: "2024-09-09T18:19:54Z"
           enc: |-
             -----BEGIN PGP MESSAGE-----
 
-            hQGMA71EESEn7N2iAQv7B8JGNlXIQHks0aei8dBqFVLe5y7eFl7rLvJg0IzjQaRl
-            FDnqZm+fCqw0OqGRUgxV0wZVzT68FgvV6GbwXUAu60/oWymsNIiS8udWugbi6+ja
-            sbdFxO3twFvvTm1feEvkY8A9FMi5D+tAip2cxSXuJoa68PjdOhysmvBAOPHF7hwQ
-            +Wlz0hoC695bSignyia7Ns0Ep6ajEpqBO3KmCnp4RUYUigu2YKR5QvHFSNyQt8Ca
-            JAJ8CqI4o45LC7hkgkpyVBCLaJO0fgQJLAabYxF4VZiA+5pbvVXINXRQfkKvWsgu
-            VQG0f0GmJh5kHZ5hmad3Hgcwzi4wM5McqEXiHxBMYCEbkicbqaC+6+/9wr/MzeQB
-            nNEiTZBr6aMmv6ijbSWSSFyYnhK/YgdfXcS11pcWcS2jVtjX/88xX/aqIwdBvj8s
-            Qpnp0W7jY88xkOhQNxxjnTNuZWa5MVRDM/Q9wRbiLTyjqRBgfCaRH+vQVRP2EhA4
-            qpZm61eC4lk1JMaWe+o30lEBLTkAQ/ZS4sKjmBJEtanhsk3ejozrepOzTzLh5/40
-            1VEDciLJTTJvYaQsDvzHr7EFjiZGbofTIev0RVrnEaOG7Hw09yd9+gVJxpTQ+fx1
-            RyI=
-            =RPjK
+            hQGMA71EESEn7N2iAQv/ZPTkvhA5wZcEcpQpQInUWZys4F7IyaAd2sD5dRbbS21e
+            lDDxB+spywtMoQ9doJ5zBzF6NDeBxASTgeBj0ielnWaRYCDJssj8Up0CcFA623qW
+            1DfniGyxTL/+AOJ028whIXHy2G2fyiUsX3UL4/ZrktSPbQS4IbF9oFw1jvvUlbWq
+            op3Rg1d2OaFN2HeKSEH5PrEUtzFuqPjGOwTedNAVj3MLL6vhRvCiXyiNZBsHpEpy
+            LcEjyYU8MyiDR5kc1CaKB1PcGnteN/eFLLgRQXFg8z6fEtP19soFGYs+OdBvveax
+            lWGe+zVX23kSrPzdJmY+1+0zDYhsLe9nK0Bn3p5WDqT/2E4giljWkNSGRPeNEufK
+            LJ0XD6tN8NF34Uxt3+32RHB+cH183jSagPXdXU3zzpJueoyepe+vNwMRP5dmLL/c
+            niSD7SfC6sDjHtPJSdcxPbGh2B1z09Ym2h2SUIppOt+KH0oyBHKXm9uLvB2EQB87
+            QK10BSRC58UNqhe+rK980l4BrUtK4bey7Fq+uaBDda0HDRoDuOpvGB2vaKzEOzJd
+            fKCzMV5e4G8CARhkhij/Q4mLnevZwcaoqgL4AOGZl8ArBePbwvq8FyXMwQ+vT4Is
+            QAIvpMmoKvPRd5MUgrAx
+            =01m9
             -----END PGP MESSAGE-----
           fp: 2D47B9C25AAD87860CC1778F7022B8F414F4AEED
     encrypted_regex: ^(data|stringData)$
