--- a/cluster/apps/wazuh-system/manager/secrets.enc.yaml
+++ b/cluster/apps/wazuh-system/manager/secrets.enc.yaml
@@ -5,33 +5,33 @@ metadata:
     name: wazuh-manager-secrets
     namespace: wazuh-system
 stringData:
-    authd.pass: ENC[AES256_GCM,data:mtUHVx0iQGpU+6Wo72CoHhYaAduw1+mG+ZLp29cv,iv:29tvniOUFJ7GQNgjtf5fG7es4EID83Xub5vPRNEg+1M=,tag:DU/1S9HwebEoMM4d2jUsmg==,type:str]
-    cluster_key: ENC[AES256_GCM,data:T/PTuasISsfpENs1SyrIZE+xOn7W2RAicTOmrLhF,iv:mxzan8+rEuNI8cKMXtDMgj4Asg3/5o7xi0AwEQ2Hq8k=,tag:uN4SK9ZDcHKKFiOFLTDvXQ==,type:str]
+    authd.pass: ENC[AES256_GCM,data:eWi/KLR5ZTsGAhrUddZo/r7Yo2Hs45QUYg7605Dm,iv:4Tk24LzuYX17aJBylY+pfduLh4/L5IWX/CrZHsCRzRc=,tag:8Ikx/OQr8zXlCOMqaOYwig==,type:str]
+    cluster_key: ENC[AES256_GCM,data:2GTkcLhKxSW2j4OTTt7he6RMdmEnTkhKurdwYkk3tdM=,iv:7Xq/SCoLHA6fFgcdFDvdmFfxVgmXShc+f8VbGICtB/8=,tag:CkkgZ6aVdDLw7JIJWvvQPw==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2024-09-09T15:06:20Z"
-    mac: ENC[AES256_GCM,data:H4JdL9TSowqJQKraT/hnmjjZhmtUqUGipKPSyyk1XIMUtVBtEcnNiLj4PljHuLwM0S0DR9u0yqaglNsrkwTnDCKXtq2j0lyuh+uGke6u4pIfq0o6AshYCBoHwDJHGODDmwVIxld/tOO143FD0h25bWnaUuzQfZdSAA5fBt6iuFg=,iv:MZVWQOoc8cD2buO0889klSVULAIvjROMaRJ3Mv8WilU=,tag:bon4hQayOzCFxHIyTkBXFw==,type:str]
+    lastmodified: "2024-09-10T12:40:28Z"
+    mac: ENC[AES256_GCM,data:SwEyku16iXnsnGUdGbTP0JnIdbQsnD3/roQ+E/0hE2HU71cfnl9IY0ZVY0DUHlwEWp9HOe6oOcBYS0tRPec727XDVPzAi/gJRA1EF4kYeAWylWgW3HZL1RKzkkracoXxiT37EEoUDEhvE14UsJkWsAF8cOAGEJzyt2j4AKqaSds=,iv:q/OPAz4W2ui/VhC9w/Gpziz4rQ87TnL8bSr4l6p4Qec=,tag:Z5DF0U4tgV07OcPSgawvPg==,type:str]
     pgp:
-        - created_at: "2024-09-09T15:06:20Z"
+        - created_at: "2024-09-10T12:40:28Z"
           enc: |-
             -----BEGIN PGP MESSAGE-----
 
-            hQGMA71EESEn7N2iAQv/VXGapYbiATBgMKIir5LUgLQhYlIt5v53piN+9BpWk+8F
-            EE46GkkxM5laqg9LVYwDWbsThPBy8t8NSQ2Ju/9p6nfgm0oAxDjLpBqpFPB4oBHY
-            RT1ZcPV/Yo9Gl3PoJNN1W3c0LbvIxiuWSWAqNrxpnT0exmShdbg+J6ui0HCjMv3n
-            FJ7BXahkyjIfd6STooIFyXc3TuRTzwvEjpNAezwfvC5p92iqJH8aBcgjrVcSnXWX
-            GwU8K6ZbH0CftM5BO08gcO9a0PcouJHFSIfaFBpM8sgTX7XgWwSmOObCOUTPpUKy
-            XbA9KLjGig0IUOzJWJdQpqqxzKcqL5Lf+aQdX47PRqy4a0noTP4657Vn9VJces9x
-            OveD+PiWUs605c0xqhnc39GTMwekah66r+Mb3WXwFv0fP3gQotesfsPplzy1152E
-            hBwz2dJ2LljNxud2DYjnsuSreozfffB+bq2jNKnjtR/RVf/q0SMC8SMiqSR1ppu7
-            SyRFHEesoag8u8f1WwdK0l4BVBjC3Uh1Z4KYuVXDQBmn70UmrR6Go46MPNM47dYH
-            dIVPMqd5w8LkylqHLccw2AKRMzFnHW5sLytjqgJBRNk7fuQKku5zsMqaCBlwYjen
-            zDJZxHHtRGZ5qwLM3njF
-            =K595
+            hQGMA71EESEn7N2iAQv/TVnq9YZGsHVobcX9C0+bK8zLB4jkMWoRGZ1inNf3hfTQ
+            IAqYyzNtg0NoEtTtibbaP0LDdjsKEiwnv/Otbb/44kgbmvlK9KuWAvnlyyg03grq
+            Fcc89w07cG2778lZugmykhNrXiVQ5Xxc67vpQRHL2lbYPISiDkteZhsI1cMkV1Wm
+            +ivBe2PY25uXH16yKHbsLF/bphf+htbFJPczZHI1p7zYSk5nDiuKstNYIUN2l8oz
+            BbiGwUMZcqGfBUK883lD257fV33WwKDZJOhd+ySXsdbfybglEyPCE71SnhIqnnx9
+            emxzwpTVj1Q+askyhmEh67ALLDP4ZEyAl0S/NOpBAmFaudsIuo/VeJhZNP6aU51h
+            SyXIiaYv52xXBM6cZrxE0VR7HC8lyV82HwY1s+VKDiGVKGqdlbp3P/q+8i05N7Eo
+            wuymZcyNNw4FMfqUf4SYk7oZGtYTVpn1KlKX2x09xgAzP8fdlJfFlW5N5ocFjQy/
+            Qhjee24MVZS0eJAzdiRE0l4BuXDGVKEAPH3IGbMrQE6ceeO9gfqM2xkRT2wJj2u4
+            zne9qbK2md9Zr83Fs++DVxImT4/EOOO+uP2PjqEvJO555xrNRCuhvR3zW7t02QfU
+            MFNlhIJlao6gvYoEDOZx
+            =HlJE
             -----END PGP MESSAGE-----
           fp: 2D47B9C25AAD87860CC1778F7022B8F414F4AEED
     encrypted_regex: ^(data|stringData)$
