--- a/cluster/apps/wazuh-system/wazuh-dashboard/certificate.yaml
+++ b/cluster/apps/wazuh-system/wazuh-dashboard/certificate.yaml
@@ -17,7 +17,7 @@ apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: dashboard
-  namespace: wazuh
+  namespace: wazuh-system
 spec:
   issuerRef:
     group: cert-manager.io
