chore(wazuh): increase storage space for master and worker

--- a/cluster/apps/wazuh-system/manager/worker/statefulset.yaml
+++ b/cluster/apps/wazuh-system/manager/worker/statefulset.yaml
@@ -151,4 +151,4 @@ spec:
         storageClassName: longhorn
         resources:
           requests:
-            storage: 500Mi
+            storage: 1Gi
