--- a/cluster/apps/wazuh-system/manager/master/statefulset.yaml
+++ b/cluster/apps/wazuh-system/manager/master/statefulset.yaml
@@ -165,4 +165,4 @@ spec:
         storageClassName: longhorn
         resources:
           requests:
-            storage: 500Mi
+            storage: 1Gi
