--- a/cluster/apps/wazuh-system/manager/worker/statefulset.yaml
+++ b/cluster/apps/wazuh-system/manager/worker/statefulset.yaml
@@ -117,7 +117,7 @@ spec:
               name: cluster
           env:
             - name: INDEXER_URL
-              value: "https://wazuh-indexer-api-svc.wazuh-system.svc.cluster.local:9200"
+              value: "https://wazuh-indexer-0.wazuh-indexer:9200"
             - name: INDEXER_USERNAME
               valueFrom:
                 secretKeyRef:
