--- a/cluster/apps/wazuh-system/wazuh-dashboard/deployment.yaml
+++ b/cluster/apps/wazuh-system/wazuh-dashboard/deployment.yaml
@@ -60,7 +60,7 @@ spec:
               name: dashboard
           env:
             - name: INDEXER_URL
-              value: "https://wazuh-indexer-api-svc.wazuh-system.svc.cluster.local:9200"
+              value: "https://wazuh-indexer-0.wazuh-indexer:9200"
             - name: INDEXER_USERNAME
               valueFrom:
                 secretKeyRef:
