feat(wazuh): increase indexer storage

--- a/cluster/apps/wazuh-system/indexer/statefulset.yaml
+++ b/cluster/apps/wazuh-system/indexer/statefulset.yaml
@@ -148,4 +148,4 @@ spec:
         storageClassName: longhorn
         resources:
           requests:
-            storage: 500Mi
+            storage: 5Gi
