--- a/cluster/apps/wazuh-system/indexer/configmap.yaml
+++ b/cluster/apps/wazuh-system/indexer/configmap.yaml
@@ -10,11 +10,12 @@ data:
     cluster.name: ${CLUSTER_NAME}
     node.name: ${NODE_NAME}
     network.host: ${NETWORK_HOST}
-    discovery.seed_hosts: wazuh-indexer-0.wazuh-indexer-discovery-svc
-    cluster.initial_master_nodes:
-      - wazuh-indexer-0
+    discovery.type: single-node
+    # discovery.seed_hosts: wazuh-indexer-0.wazuh-indexer-discovery-svc
+    # cluster.initial_master_nodes:
+    #  - wazuh-indexer-0
     
-    node.max_local_storage_nodes: "1"
+    # node.max_local_storage_nodes: "1"
     path.data: /var/lib/wazuh-indexer
     path.logs: /var/log/wazuh-indexer
     plugins.security.ssl.http.pemcert_filepath: /usr/share/wazuh-indexer/certs/node/tls.crt
@@ -35,6 +36,8 @@ data:
     plugins.security.restapi.roles_enabled:
     - "all_access"
     - "security_rest_api_access"
+    plugins.security.system_indices.enabled: true
+    plugins.security.system_indices.indices: [".opendistro-alerting-config", ".opendistro-alerting-alert*", ".opendistro-anomaly-results*", ".opendistro-anomaly-detector*", ".opendistro-anomaly-checkpoints", ".opendistro-anomaly-detection-state", ".opendistro-reports-*", ".opendistro-notifications-*", ".opendistro-notebooks", ".opensearch-observability", ".opendistro-asynchronous-search-response*", ".replication-metadata-store"]
     plugins.security.allow_default_init_securityindex: true
     cluster.routing.allocation.disk.threshold_enabled: false
     compatibility.override_main_response_version: true
